crates/toml_edit/tests/fixtures/invalid/rrbrace.stderr
TOML parse error at line 1, column 8
  |
1 | [[table] ]
  |        ^
Unexpected `]`
Expected `.` or `]]`
While parsing a Table Header
